[MODIFY/DELETE] delete redundant files for systolic pressure notebooks, bugfix to PCA_DE_generic.ipynb

--- a/src/PCA_DE_generic.ipynb
+++ b/src/PCA_DE_generic.ipynb
@@ -79,7 +79,6 @@
    "outputs": [],
    "source": [
     "input_dir = '/project/data/preprocessed/PE_50K_sex_complete'\n",
-    "retrain = True\n",
     "fdr_DE = 0.05"
    ]
   },
@@ -144,13 +143,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d0fb4dbc",
+   "id": "7f07b451",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<MicroBiome.DiffExpTransform at 0x7f6602634e90>"
+       "<MicroBiome.DiffExpTransform at 0x7f3dfda7f790>"
       ]
      },
      "execution_count": 6,
@@ -165,40 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "efc3177d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       0.001483\n",
-       "1       0.874618\n",
-       "2       0.874619\n",
-       "3       0.874618\n",
-       "4       0.954449\n",
-       "          ...   \n",
-       "1937    0.874619\n",
-       "1938    0.874619\n",
-       "1939    0.874619\n",
-       "1940    0.046491\n",
-       "1941    0.088564\n",
-       "Name: neg_log10_p, Length: 1942, dtype: float64"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DE.results['0']['neg_log10_p']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "2d2f4757",
+   "execution_count": 7,
+   "id": "d815a990",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +174,7 @@
        "<AxesSubplot:xlabel='tstat', ylabel='neg_log10_p'>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -233,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "72684562",
+   "id": "ce56dcc9",
    "metadata": {},
    "outputs": [
     {
@@ -253,8 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "fc488d9b",
+   "execution_count": 9,
+   "id": "17277d25",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +420,7 @@
        "1109        3103                Lachnospira eligens"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,8 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "9bc4924c",
+   "execution_count": 10,
+   "id": "519fe00e",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +441,7 @@
        "<AxesSubplot:xlabel='tstat', ylabel='neg_log10_p'>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -499,8 +466,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "bbeb7a59",
+   "execution_count": 11,
+   "id": "40f20a78",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +476,7 @@
        "58"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,8 +487,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "d344e6af",
+   "execution_count": 12,
+   "id": "35d60a3f",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +873,7 @@
        "1580        4864             [Ruminococcus] gnavus"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51cb76c5",
+   "id": "6c9d66e9",
    "metadata": {},
    "source": [
     "# Run PCA on Differentially Abundant Features"
@@ -925,8 +892,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "cbd30dcc",
+   "execution_count": 13,
+   "id": "bf783050",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,17 +905,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "4385df44",
+   "execution_count": 14,
+   "id": "7550dae5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f66002c9750>]"
+       "[<matplotlib.lines.Line2D at 0x7f3dfc0dc910>]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -971,17 +938,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "e2a5c117",
+   "execution_count": 15,
+   "id": "552ca6e4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f66002407d0>]"
+       "[<matplotlib.lines.Line2D at 0x7f3dfc052d10>]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1004,8 +971,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "8d6febfe",
+   "execution_count": 16,
+   "id": "552472aa",
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +983,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,8 +994,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "318b3343",
+   "execution_count": 17,
+   "id": "457b5916",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,8 +1005,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "fade8f72",
+   "execution_count": 18,
+   "id": "254e8a9f",
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1015,7 @@
        "<AxesSubplot:xlabel='PC1', ylabel='PC2'>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1071,8 +1038,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "021dac28",
+   "execution_count": 19,
+   "id": "d64fbc3f",
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1048,7 @@
        "<AxesSubplot:xlabel='PC2', ylabel='PC3'>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1104,8 +1071,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "d4ff4a4e",
+   "execution_count": 20,
+   "id": "77ea62a4",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1081,7 @@
        "<AxesSubplot:xlabel='PC3', ylabel='PC4'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1138,7 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3806ad4",
+   "id": "822fb7e1",
    "metadata": {},
    "outputs": [],
    "source": []
