[UPDATE] rm previous pushed html files, add updated py notebooks, and add Rmd for generating publication figures.

--- a/results/notebooks/Jie_2017_PE_subsampling_expt.ipynb
+++ b/results/notebooks/Jie_2017_PE_subsampling_expt.ipynb
@@ -1440,6 +1440,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 153,
+   "id": "e774427c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stats_df.to_csv(\"PE_insilico_depth_stats_df.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "7c22ddcb",
    "metadata": {},
