--- a/results/notebooks/Jie_2017_subsampling_10K_seed_eval.ipynb
+++ b/results/notebooks/Jie_2017_subsampling_10K_seed_eval.ipynb
@@ -1469,7 +1469,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
